--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ body {
 .tm-filter {
 	padding: 20px 0;
 	background: #fff;
-	box-shadow: 0px 0px 3px 0px rgb(173, 173, 173);
+	box-shadow: 0px 1px 1px 0px rgb(222, 222, 222);
 }
 
 .tm-filter-param {
@@ -86,7 +86,18 @@ body {
 }
 
 .tm-day {
+	border-radius: 5px;
+	background: #fff;
 	margin: 20px 0;
+	box-shadow: 0px 1px 1px 0px rgb(222, 222, 222);
+}
+
+.tm-day-head {
+    padding: 15px;
+    background-color: #66799A;
+    border-radius: 5px 5px 0 0;
+    color: #fff;
+    margin: 0;
 }
 
 .uk-form input:not([type]), .uk-form input[type=text], .uk-form input[type=password], .uk-form input[type=email], .uk-form input[type=url], .uk-form input[type=search], .uk-form input[type=tel], .uk-form input[type=number], .uk-form input[type=datetime], .uk-form input[type=datetime-local], .uk-form input[type=date], .uk-form input[type=month], .uk-form input[type=time], .uk-form input[type=week], .uk-form input[type=color], .uk-form select, .uk-form textarea {
@@ -139,4 +150,13 @@ body {
 
 .uk-button-primary {
 	background-color: #5DB8F1;
+}
+
+.tm-table {
+	margin: 0;
+}
+
+.tm-table thead {
+	background: #C0CCE0;
+	color: #54627C;
 }
