--- a/partials/schedule.html
+++ b/partials/schedule.html
@@ -50,7 +50,8 @@
 				<td class="uk-text-bold">
 					<div ng-if="lesson.type == 'лаб.'" class="uk-badge uk-badge-danger uk-badge-notification">Лабораторная</div> 
 					<div ng-if="lesson.type == 'лек.'" class="uk-badge uk-badge-success uk-badge-notification">Лекция</div> 
-					<div ng-if="lesson.type == 'практ.зан.'" class="uk-badge uk-badge-warning uk-badge-notification">Практическое занятие</div> 
+					<div ng-if="lesson.type == 'практ.зан.'" class="uk-badge uk-badge-warning uk-badge-notification">Практическое занятие</div>
+					<div ng-if="lesson.type == 'Практическое занятие (УСР)'" class="uk-badge uk-badge-notification">УСР</div> 
 					{{ lesson.title }} </td>
 				<td class="uk-text-right"> {{ lesson.teacher.fullname }} </td>
 				<td class="uk-text-right"> {{ lesson.address }} </br>Кабинет: {{ lesson.room }} </td>
