--- a/style.css
+++ b/style.css
@@ -27,17 +27,22 @@ body {
 }
 
 .tm-navbar-brand {
-    width: 180px;
+    width: 160px;
     height: 40px;
-    background: url("logo.svg") center no-repeat;
+    background-image: url("logo.png");
+    background-size: 130px 40px;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 .tm-navbar-brand-off {
 	display: inline-block;
 	width: 90px;
 	height: 28px;
-	background: url("logo.svg") center no-repeat;
+	background-image: url("logo.png");
 	background-size: 90px 28px;
+	background-position: center;
+    background-repeat: no-repeat;
 	vertical-align: middle;
 }
 
